fix: drag on mobile

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -218,6 +218,17 @@
   //     display: block;
   //   }
 
+  .example-handle {
+    display: block;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    color: #ccc;
+    cursor: move;
+    width: 24px;
+    height: 24px;
+  }
+
   .deck {
     left: 8%;
     height: 115px;
